--- a/Guess gameII/index.html
+++ b/Guess gameII/index.html
@@ -31,7 +31,8 @@
                 <div class="card" id="7">7</div>
                 <div class="card" id="8">8</div>
                 <div class="card" id="9">9</div>
-            </div>
+            </div><br>
+            <button ng-click="reset()">Play again</button>
         </div>
         
     </body>
